# minizinc-introspector

./: .env  .file_analysis_summary_index.txt  .gitignore  .gitmodules  .goal.md.swp  CMakeLists.txt  Cargo.toml  GEMINI.md  README.md  abstraction_free_verse.md  agent_mandate_haikus.md  agent_project_ontology_sonnet.md  agent_sonnet.md  alife_limerick.md  all_poem_emoji_summaries.md  backpack_limerick.md  bit_size_haikus.md  bootstrap_limerick.md  bug_report_inkwell_clang.md  bug_report_minizinc_ffi_gc_assertion.md  build_and_debug_rhyme.md  build_and_test.sh  build_config.toml  build_minizinc_with_coverage.sh  build_test_c_rust.sh  build_trust_haikus.md  cc_license_free_verse.md  cc_license_sonnet.md  change_request_credential_import.md  change_request_emoji_regex.md  change_request_github_oauth.md  change_request_keywords_fix.md  change_request_launch_gemini_tmux.md  change_request_launchpad_tool.md  change_request_malformed_meme_fix.md  change_request_oauth_rust_module.md  change_request_operational_workflow.md  change_request_prime_categorization_system.md  change_request_qa_mzn.md  change_request_rust_native_broadcast_functions.md  (+298 more)
crates/asciicast_processor/: Cargo.toml
crates/asciicast_processor/src/: asciicast_reader.rs  cli.rs  main.rs  pattern_generator.rs  raw_parser.rs  rust_parser.rs  test_cleaning.rs  test_strip.rs
crates/asciicast_processor/src/commands/: analyze.rs  count_raw.rs  extract_lines.rs  filter.rs  generate.rs  mod.rs
crates/credential_manager/: Cargo.toml
crates/credential_manager/src/: lib.rs
crates/gemini_utils/: Cargo.toml  build.rs
crates/gemini_utils/src/: argument_mapper.rs  kantspel.rs  lib.rs  processing.rs
crates/gemini_utils/src/macro_parser/: comma_separated_exprs.rs  gemini_eprintln_input.rs  mod.rs  named_args_input.rs
crates/gemini_utils/src/string_processor/: mod.rs  processing_context.rs  segment_appender.rs
crates/gemini_utils/src/token_generator/: generate_eprintln_tokens.rs  mod.rs
crates/github-repo-inspector/: Cargo.toml
crates/github-repo-inspector/src/: main.rs
crates/kantspel_macros/: Cargo.toml
crates/kantspel_macros/src/: lib.rs  regex_maps.rs
crates/kantspel_macros/src/macros/: kantspel_regex.rs  kantspel_transform.rs  mod.rs
crates/launchpad/: Cargo.toml
crates/launchpad/src/: gemini_cli_options.rs  launchpad_app.rs  launchpad_main.rs  main.rs  narrator.rs  orchestrator.rs  orchestrator_utils.rs
crates/launchpad/src/dum_wrappers/: gemini_cli_runner.rs  mod.rs  run_command.rs  run_main.rs  run_options.rs
crates/launchpad/src/orchestrator/: command_executor.rs  gemini_cli_manager.rs
crates/launchpad/src/stages/: mod.rs  stage.rs  tmux_controller_cmd_stage.rs  tmux_stage.rs
crates/mini-act/: Cargo.toml
crates/mini-act/src/: gemini_context_args.rs  git_actions.rs  main.rs  runner.rs  workflow.rs
crates/mini-act/src/runner/: env_processor.rs  job_runner.rs  mod.rs  step_executor.rs
crates/mini-act/tests/workflows/: test_workflow.yml  test_workflow_gemini.yml
crates/poem_macro_test_crate/: Cargo.toml
crates/poem_macro_test_crate/src/: lib.rs
crates/poem_yaml_fixer/: Cargo.toml  README.md
crates/poem_yaml_fixer/src/: lib.rs  main.rs  manual_parser.rs  regex_patterns.rs  regex_patterns.toml
crates/poem_yaml_fixer/src/functions/: archeology_parser.rs  create_function_registry.rs  extract_front_matter.rs  extract_words_from_text.rs  generate_generalized_regex.rs  generate_regex.rs  generate_templates.rs  initialize_config.rs  kantspel_callbacks.rs  load_regex_config.rs  mod.rs  parse_front_matter_fields.rs  parse_front_matter_with_regex.rs  parse_poem_file_direct.rs  process_all_files.rs  process_document_with_regex.rs  process_files.rs  process_memes_with_workflow.rs  process_poem_file.rs  process_single_file.rs  process_single_poem_file_for_report.rs  process_unmatched_lines_for_grex.rs  process_word_indexing.rs  regex_patterns.rs  regex_report.rs  register_new_callbacks.rs  types.rs  (+9 more)
crates/poem_yaml_fixer/tests/: front_matter_fixes.rs  integration_test.rs  manual_parser_test.rs  regex_validation_tests.rs
crates/rust_file_finder/: Cargo.toml
crates/rust_file_finder/src/: additional_keywords.md  main.rs
crates/solfunmeme-core/: Cargo.toml
crates/solfunmeme-core/src/: gemini_cli_options.rs  gemini_commands.rs  launchpad_app.rs  main.rs  narrator.rs  orchestrator.rs
crates/vocabulary_dfa_generator/: Cargo.toml
crates/vocabulary_dfa_generator/src/: main.rs
crates/zos-bootstrap/: Cargo.toml
crates/zos-bootstrap/src/: all_extracted_strings.dzn  cli.rs  code_analysis.rs  command_handlers.rs  constants.rs  lib.rs  main.rs
crates/zos-bootstrap/tests/: path_utils_test.rs
crates/zos-fast-query/: Cargo.toml  build.rs  chunk_generator.rs  index_writer.rs  recognizer_template.rs  term_loader.rs
crates/zos-fast-query/src/: build_utils.rs  index_writer.rs  main.rs  term_loader.rs
crates/zos-stage-github-repo-inspector/: Cargo.toml
crates/zos-stage-github-repo-inspector/src/: main.rs
crates/zos-stage-session-manager/: Cargo.toml
crates/zos-stage-session-manager/src/: args.rs  main.rs  session_exporter.rs  session_launcher.rs  utils.rs
doc_to_minizinc_data/: Cargo.toml  config.toml
doc_to_minizinc_data/src/: app_config.rs  cli.rs  config.rs  data_generation.rs  embedding_algebra.rs  embedding_lookup.rs  file_processing.rs  lib.rs  logger.rs  main.rs  minizinc_runner.rs  minizinc_writer.rs  prelude.rs  test_write.rs  word_data.rs  word_processing.rs  wordnet_processing.rs
doc_to_minizinc_data/src/commands/: generate_data.rs  inspect_parquet.rs  inspect_parquet_schema.rs  lookup_embedding.rs  map_element_name_to_embedding.rs  mod.rs  run_hf_validator.rs
doc_to_minizinc_data/src/data_generation/: initialize_data_structures.rs  parquet_export.rs  process_files_and_collect_words.rs  report_extracted_data.rs  write_chunked_embeddings_dzn.rs  write_data_declarations_mzn.rs
doc_to_minizinc_data/src/utils/: arrow_schema_printer.rs  mod.rs
git_diff_analyzer/: Cargo.toml
git_diff_analyzer/src/: crq_loader.rs  git_parser.rs  main.rs  text_processor.rs  vector_utils.rs
(+6212 files in other folders)
