[workspace]
resolver = "3"
members = [
    "tools/minizinc_ffi",
    "tools/coverage_extractor",
    "crates/zos-bootstrap",
    "crates/constant_analyzer",
    "crates/constant_analyzer_macros",
    "crates/minizinc_introspector",
    "crates/minizinc_macro",
    "crates/minizinc_macro_test",
    "doc_organizer",
    "doc_to_minizinc_data",
    "embedding_analyzer",
    "zos-bootstrap-main",
    "crates/minizinc_output_parser",
    "rust_lattice_project",
    "crates/rust_file_finder", "crates/zos-fast-query",
]
