[package]
name = "doc_to_minizinc_data"
version = "0.1.0"
edition = "2024"

[dependencies]
walkdir = "2.5.0"
rand = "0.8"
clap = { version = "4.0", features = ["derive"] }
arrow = { workspace = true }
parquet = { workspace = true }
chrono = "0.4.41" # Added chrono directly
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"

[features]
default = []
enable-hf-validator-features = ["hf-dataset-validator"]

[dependencies.hf-dataset-validator]
version = "0.1.0"
optional = true