[package]
name = "git_diff_analyzer"
version = "0.1.0"
edition = "2021"

[dependencies]
git2 = { workspace = true }
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
stop-words = "0.8.1"
# ndarray = "0.15"
# ndarray-linalg = "0.16"
walkdir = "2.5"
anyhow = "1.0"