[package]
name = "gemini_utils"
version = "0.1.0"
edition = "2024"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
phf = { version = "0.11", features = ["macros"] }
phf_codegen = "0.11"
emojicons = { path = "../../vendor/rust-emojicons" }

[build-dependencies]
phf_codegen = "0.11"
