[package]
name = "kantspel_macros"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
emojicons = { path = "../../vendor/rust-emojicons" }
poem_macros = { path = "../poem_macros" }
anyhow = "1.0"
regex = "1.0"