[package]
name = "kantspel_macros"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
poem_macros = { path = "../poem_macros" }
anyhow = "1.0"
regex = "1.0"
gemini_utils = { path = "../gemini_utils" }
poem_traits = { path = "../poem_traits" }
syn = { version = "2.0", features = ["full", "visit-mut"] }
quote = "1.0"
proc-macro2 = "1.0"
kantspel_lib = { path = "../../crates/kantspel_lib" }
lazy_static = "1.4.0"