[package]
name = "launchpad"
version = "0.1.0"
edition = "2021"

[dependencies]
dum = { path = "../../vendor/dum" }
tokio = { version = "1", features = ["full"] }
clap = { version = "4.5.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# This crate is intended to be a minimal loader, so it should have minimal dependencies.
# It will primarily use functionality from the Rust standard library.
