[package]
name = "mini-act"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at
# https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
git2 = "0.19.0"
tempfile = "3.21.0"
gemini_utils = { path = "../../crates/gemini_utils" }
kantspel_macros = { path = "../../crates/kantspel_macros" }
