[package]
name = "poem_macro_test_crate"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poem_macros = { path = "../poem_macros" } # Corrected path
anyhow = "1.0"
tempfile = "3.10.1"
poem_traits = { path = "../poem_traits" }