[package]
name = "poem_yaml_fixer"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
regex = "1.5"
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"
serde_yaml = "0.9"
walkdir = "2.3"
clap = { version = "4", features = ["derive"] }
poem_macros = { path = "../poem_macros" }
once_cell = "1.19"
linkme = "0.3"
grex = { path = "../../vendor/grex" }
poem_traits = { path = "../poem_traits" }
tempfile = "3.10.1"
serde_json = "1.0"
lazy_static = "1.4"