[package]
name = "file_content_analyzer"
version = "0.1.0"
edition = "2021"

[dependencies]
walkdir = "2.3"
toml = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.5"
clap = { version = "4.0", features = ["derive"] }
rayon = "1.5"
anyhow = "1.0"
syn = { version = "2.0", features = ["full"] }
quote = "1.0"

