[package]
name = "solfunmeme-core"
edition.workspace = true
version.workspace = true
authors.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Dependencies from launchpad
dum = { path = "../../vendor/dum" }
tokio = { version = "1", features = ["full"] }
clap = { version = "4.5.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
git2 = "0.19"
futures = "0.3"
serde_yaml = "0.9"

# Core utility for logging
gemini_utils = { path = "../../crates/gemini_utils" }

# Added for tmux_controller integration
tmux_interface = { path = "../../vendor/tmux_interface" }
chrono = "0.4"
gemini_cli_manager = { path = "../../crates/gemini_cli_manager" }

[lints]
workspace = true
