[package]
name = "vocabulary_dfa_generator"
version = "0.1.0"
edition = "2021"

[dependencies]
regex = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.7"
# For file I/O and collections
# No explicit dependencies needed for std::fs and std::io, they are part of the standard library
