[package]
name = "zos-bootstrap"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
thiserror = "1.0"
dirs = "5.0"
chrono = "0.4.41"
proc-macro2 = "1.0.101"
syn = { version = "2.0", features = ["full", "visit"] }
glob = "0.3"
walkdir = "2"
once_cell = "1.19.0"
quote = "1.0"
regex = "1.10.0"
doc_to_minizinc_data = { path = "../../doc_to_minizinc_data" }
minizinc_ffi = { path = "../../tools/minizinc_ffi" }



