[package]
name = "zos-fast-query"
version = "0.1.0"
edition = "2024"

[dependencies]
jaq-core = "2.2.1"
jaq-json = "1.1.3"
jaq-std = "2.1.2"
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.10.4"
lazy_static = "1.4.0"
toml = "0.8"

[build-dependencies]
regex = "1.10.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

