[package]
name = "zos-stage-github-repo-inspector"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
octocrab = { path = "../../vendor/octocrab" }
credential_manager = { path = "../../crates/credential_manager" }
